--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 nltk==3.8.1
 numpy==1.25.2
 pandas==2.1.0
-regex==2025.9.6
+regex==2023.12.25
 
 
 scikit-learn==1.3.1
@@ -10,9 +10,12 @@ scikit-learn==1.3.1
 torch==2.3.1
 transformers==4.42.2
 
+sentencepiece>=0.1.99
+safetensors>=0.4.2
+wordcloud==1.9.3
 
 matplotlib==3.8.0
-seaborn==0.12.3
+seaborn==0.12.2
 plotly==5.17.0
 
 
